--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
-{
-    "name": "A browser action with a popup that changes the page color.",
+﻿{
+    "name": "🚗",
     "version": "1.0",
     "permissions": [
       "tabs", "http://*/*", "https://*/*"
     ],
     "browser_action": {
-        "default_title": "Set this page's color.",
+        "default_title": "🚗",
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
