--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,6 @@
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
+    "options_page": "options.html",
     "manifest_version": 2
   }
