--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "🚗",
     "version": "1.0",
     "permissions": [
-      "tabs", "http://*/*", "https://*/*"
+      "tabs", "http://nippm.natinst.com/*", "https://nippm.natinst.com/*"
     ],
     "browser_action": {
         "default_title": "🚗",
@@ -12,7 +12,7 @@
     "content_scripts": [
       {
         "matches": ["http://nippm.natinst.com/*"],
-        "js": ["fluidifyLayout.js"]
+        "js": ["jquery.js", "fluidifyLayout.js"]
       }
     ],
     "options_page": "options.html",
