--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "🚗",
     "version": "1.0",
     "permissions": [
-      "tabs", "http://*/*", "https://*/*"
+      "tabs", "http://*/*", "https://*/*", "storage"
     ],
     "browser_action": {
         "default_title": "🚗",
