--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       {
         "matches": ["http://nippm.natinst.com/*", "https://nippm.natinst.com/*"],
         "css": ["fluidifyLayout.css"],
-        "js": ["helpers.js", "jquery.js", "fluidifyLayout.js", "hidefields.js"]
+        "js": ["helpers.js", "jquery.js", "fluidifyLayout.js", "hidefields.js","pseudoFields.js"]
       }
     ],
     "options_page": "options.html",
